tests/lean/lift_coe_off.lean.expected.out
lift_coe_off.lean:10:0: error: type mismatch at application
  tree.rec (λ (a : A), 1) (λ (t₁ t₂ : tree A) (n₁ : ?M_1) (n₂ : ?M_2), ?M_3 + ?M_4)
term
  λ (t₁ t₂ : tree A) (n₁ : ?M_1) (n₂ : ?M_2),
    ?M_3 + ?M_4
has type
  Π (t₁ t₂ : tree A) (n₁ : ?M_1),
    ?M_2 → ℕ
but is expected to have type
  tree A → tree A → num → num → num
